--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -33,7 +33,7 @@
             android:gravity="center_vertical"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
-            android:text="yeshu121521@gmail.com"
+            android:text="yeshu@gmail.com"
             android:padding="10dp"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
@@ -54,7 +54,7 @@
             android:drawablePadding="8dp"
             android:gravity="center_vertical"
             android:hint="@string/passowrd"
-            android:text="pass32"
+            android:text="pass"
             android:inputType="textPassword"
             android:padding="10dp"
             android:textColor="@color/white"
