--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -2,44 +2,43 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/repeated_bg"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.android.alekhya.revisionv3.quiz.QuizMainactivity"
-    tools:showIn="@layout/app_bar_main"
-    android:background="@drawable/repeated_bg">
+    tools:showIn="@layout/app_bar_main">
 
 
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:padding="10dp"
         android:background="@drawable/box_shape"
-        android:id="@+id/relativeLayout">
+        android:padding="10dp">
 
         <TextView
+            android:id="@+id/tvAboutQuiz"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tvAboutQuiz"
-            android:text="Test your IT knowledge. All the questions are very simple. Read and practice more"
+            android:text="Test your subject knowledge. All the questions are very simple. Read and practice more"
+            android:textColor="#000000"
             android:textSize="18sp"
-            android:textStyle="normal"
-            android:textColor="#000000"/>
+            android:textStyle="normal" />
 
     </RelativeLayout>
 
     <Button
+        android:id="@+id/btnStart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/str_start_now"
-        android:textColor="#ffffff"
+        android:layout_below="@+id/relativeLayout"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/btnblue"
         android:paddingLeft="6dp"
         android:paddingRight="6dp"
-        android:id="@+id/btnStart"
-        android:background="@drawable/btnblue"
-        android:layout_below="@+id/relativeLayout"
-        android:layout_centerHorizontal="true" />
+        android:text="@string/str_start_now"
+        android:textColor="#ffffff" />
 
 </RelativeLayout>
