--- a/app/src/main/res/layout/loginmainactivity.xml
+++ b/app/src/main/res/layout/loginmainactivity.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:background="@color/background_color" >
 
-        <ImageView
+        <!--<ImageView
             android:id="@+id/close_activity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -20,7 +20,7 @@
             android:layout_margin="4dp"
             android:contentDescription="@string/closebutton"
             android:padding="5dp"
-            android:src="@drawable/close" />
+            android:src="@drawable/close" />-->
 
         <FrameLayout
             android:id="@+id/frameContainer"
