--- a/app/src/main/res/layout/loginpage.xml
+++ b/app/src/main/res/layout/loginpage.xml
@@ -11,16 +11,16 @@
         android:layout_height="wrap_content"
         android:background="@color/background_color" >
 
-        <ImageView
-            android:id="@+id/close_activity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_gravity="top|end"
-            android:layout_margin="4dp"
-            android:contentDescription="@string/closebutton"
-            android:padding="5dp"
-            android:src="@drawable/close" />
+        <!-- <ImageView
+             android:id="@+id/close_activity"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_alignParentRight="true"
+             android:layout_gravity="top|end"
+             android:layout_margin="4dp"
+             android:contentDescription="@string/closebutton"
+             android:padding="5dp"
+             android:src="@drawable/close" />-->
 
         <FrameLayout
             android:id="@+id/frameContainer"
