--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -14,28 +14,31 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="88dp"
         app:srcCompat="@drawable/icon" />
-    <EditText
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="REVISION"
-        android:textSize="40sp"
         android:layout_below="@id/imageView"
+        android:layout_marginLeft="95dp"
         android:layout_marginTop="15dp"
-        android:layout_marginLeft="95dp"/>
-    <EditText
+        android:text="REVISION"
+        android:textSize="40sp" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="IT R16"
-        android:textSize="40sp"
         android:layout_below="@id/imageView"
+        android:layout_marginLeft="120dp"
         android:layout_marginTop="80dp"
-        android:layout_marginLeft="120dp"/>
-    <EditText
+        android:text="IT R16"
+        android:textSize="40sp" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ⒸDeveloped by Innogeecks Technology"
-        android:textSize="20sp"
         android:layout_below="@id/imageView"
+        android:layout_marginLeft="50dp"
         android:layout_marginTop="200dp"
-        android:layout_marginLeft="50dp"/>
+        android:text="ⒸDeveloped by Innogeecks Technology"
+        android:textSize="15sp" />
 </RelativeLayout>
