--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,7 +17,7 @@
             <item
                 android:id="@+id/nav_quiztwo"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Quiz 2" />
+                android:title="Calculator" />
         </menu>
     </item>
     <item android:title="Networking">
@@ -25,7 +25,7 @@
             <item
                 android:id="@+id/nav_quizthree"
                 android:icon="@drawable/ic_menu_gallery"
-                android:title="Quiz 3" />
+                android:title="Calc 2" />
             <item
                 android:id="@+id/nav_quizfour"
                 android:icon="@drawable/ic_menu_slideshow"
